--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-INSTAGRAM_USER="tako_de_bistek69"
-INSTAGRAM_PASS="Tufi246810"
+INSTAGRAM_USER="tu_usuario_instagram"
+INSTAGRAM_PASS="tu_contraseña_instagram"
